--- a/04-fundamental-projects/07-slider/starter/src/index.css
+++ b/04-fundamental-projects/07-slider/starter/src/index.css
@@ -129,6 +129,7 @@ ul {
 .img {
   width: 100%;
   display: block;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 /* buttons */
@@ -212,6 +213,22 @@ ul {
 .form-textarea {
   height: 7rem;
 }
+::-webkit-input-placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
+::-moz-placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
+:-ms-input-placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
+::-ms-input-placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
 ::placeholder {
   font-family: inherit;
   color: var(--grey-400);
@@ -222,6 +239,12 @@ ul {
   text-transform: capitalize;
 }
 /* alert */
+
+@-webkit-keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
 
 @keyframes spinner {
   to {
@@ -235,6 +258,7 @@ ul {
   border: 5px solid var(--grey-400);
   border-radius: 50%;
   border-top-color: var(--primary-500);
+  -webkit-animation: spinner 0.6s linear infinite;
   animation: spinner 0.6s linear infinite;
   margin: 0 auto;
 }
@@ -277,6 +301,7 @@ ul {
   height: 150px;
   border-radius: 50%;
   margin-bottom: 1rem;
+  -o-object-fit: cover;
   object-fit: cover;
   border: 4px solid var(--primary-200);
   box-shadow: var(--shadow-3);
